name:                update-nix-file
version:             0.1.0.0
synopsis:            A program to modify arbitrary values in Nix expressions
description:         Blah
homepage:            https://github.com/sorki/update-nix-file#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Nix
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Update.Nix.File
                     , Update.Nix.File.Eval
                     , Update.Nix.File.Find
                     , Update.Nix.File.Util
                     , Update.Op
                     , Text.Megaparsec.Pos.Util
  other-modules:       Update.Nix.File.Types
                     , Update.Nix.File.Unused
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , hnix >= 0.6
                     , prettyprinter
                     , process
                     , text
                     , time
                     , uniplate
                     , pretty-simple
                     , update-nix-fetchgit
                     , safe
                     , interpolate
                     , megaparsec
                     , mono-traversable
  default-language:    Haskell2010
  ghc-options: -Wall

executable update-nix-file
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text >= 1.2
                     , optparse-applicative
                     , update-nix-file
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/update-nix-file
